fixed spacing issue with food cards | Food section

--- a/assets/scss/_food.scss
+++ b/assets/scss/_food.scss
@@ -238,8 +238,8 @@
             .card__info {
               margin: 2em 0;
               padding: 0 1em;
-              font-size: .95rem;
-              line-height: 1.5rem;
+              font-size: 1rem;
+              line-height: 1.4rem;
               letter-spacing: .4px;
               span {
                 font-weight: 500;
@@ -259,7 +259,8 @@
                 filter: drop-shadow(0px 4px 5px hsla(0, 0%, 0%, 0.4));
                 transition: top 0.5s ease-in-out;
                 &.pizza {
-                  top: 0.6em;
+                  // top: 0.6em;
+                  top: -.6em;
                 }
               }
             }
@@ -297,7 +298,7 @@
               }
               .img-container {
                 .pizza {
-                  top: .4em;
+                  top: -.8em;
                 }
               }
             }
